// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchFiltersPanel Snapshots matches snapshot with active filters 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-small search-results-v2__filters-card"
  >
    <div
      class="ant-card-body"
    >
      <div
        class="search-results-v2__filters-card-header"
      >
        <span
          class="ant-typography"
        >
          <strong>
            <span
              aria-label="filter"
              class="anticon anticon-filter search-results-v2__filters-card-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="filter"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M880.1 154H143.9c-24.5 0-39.8 26.7-27.5 48L349 597.4V838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V597.4L907.7 202c12.2-21.3-3.1-48-27.6-48zM603.4 798H420.6V642h182.9v156zm9.6-236.6l-9.5 16.6h-183l-9.5-16.6L212.7 226h598.6L613 561.4z"
                />
              </svg>
            </span>
            Filters
          </strong>
        </span>
        <button
          class="ant-btn ant-btn-link ant-btn-sm"
          type="button"
        >
          <span
            aria-label="clear"
            class="anticon anticon-clear"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="clear"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <defs>
                <style />
              </defs>
              <path
                d="M899.1 869.6l-53-305.6H864c14.4 0 26-11.6 26-26V346c0-14.4-11.6-26-26-26H618V138c0-14.4-11.6-26-26-26H432c-14.4 0-26 11.6-26 26v182H160c-14.4 0-26 11.6-26 26v192c0 14.4 11.6 26 26 26h17.9l-53 305.6a25.95 25.95 0 0025.6 30.4h723c1.5 0 3-.1 4.4-.4a25.88 25.88 0 0021.2-30zM204 390h272V182h72v208h272v104H204V390zm468 440V674c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v156H416V674c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v156H202.8l45.1-260H776l45.1 260H672z"
              />
            </svg>
          </span>
          <span>
            Clear
          </span>
        </button>
      </div>
      <div
        class="search-results-v2__filters-card-tags"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
          style="flex-wrap: wrap; margin-bottom: -4px;"
        >
          <div
            class="ant-space-item"
            style="margin-right: 4px; padding-bottom: 4px;"
          >
            <span
              class="ant-tag ant-tag-blue search-results-v2__filters-card-tag"
            >
              SW
              <span
                aria-label="close"
                class="anticon anticon-close ant-tag-close-icon"
                role="img"
                tabindex="-1"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                  />
                </svg>
              </span>
            </span>
          </div>
          <div
            class="ant-space-item"
            style="padding-bottom: 4px;"
          >
            <span
              class="ant-tag ant-tag-blue search-results-v2__filters-card-tag"
            >
              Open
              <span
                aria-label="close"
                class="anticon anticon-close ant-tag-close-icon"
                role="img"
                tabindex="-1"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                  />
                </svg>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-collapse ant-collapse-icon-position-end ant-collapse-ghost"
      >
        <div
          class="ant-collapse-item ant-collapse-item-active"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="right"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  style="transform: rotate(90deg);"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <span
                    style="color: rgb(46, 125, 50);"
                  >
                    <span
                      aria-label="environment"
                      class="anticon anticon-environment"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="environment"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M854.6 289.1a362.49 362.49 0 00-79.9-115.7 370.83 370.83 0 00-118.2-77.8C610.7 76.6 562.1 67 512 67c-50.1 0-98.7 9.6-144.5 28.5-44.3 18.3-84 44.5-118.2 77.8A363.6 363.6 0 00169.4 289c-19.5 45-29.4 92.8-29.4 142 0 70.6 16.9 140.9 50.1 208.7 26.7 54.5 64 107.6 111 158.1 80.3 86.2 164.5 138.9 188.4 153a43.9 43.9 0 0022.4 6.1c7.8 0 15.5-2 22.4-6.1 23.9-14.1 108.1-66.8 188.4-153 47-50.4 84.3-103.6 111-158.1C867.1 572 884 501.8 884 431.1c0-49.2-9.9-97-29.4-142zM512 880.2c-65.9-41.9-300-207.8-300-449.1 0-77.9 31.1-151.1 87.6-206.3C356.3 169.5 431.7 139 512 139s155.7 30.5 212.4 85.9C780.9 280 812 353.2 812 431.1c0 241.3-234.1 407.2-300 449.1zm0-617.2c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 551c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 439c0-29.9 11.7-58 32.8-79.2C454 338.6 482.1 327 512 327c29.9 0 58 11.6 79.2 32.8C612.4 381 624 409.1 624 439c0 29.9-11.6 58-32.8 79.2z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <span
                    class="ant-typography ant-typography-secondary"
                    style="font-size: 13px;"
                  >
                    Mine Filters
                  </span>
                </div>
              </div>
            </span>
          </div>
          <div
            class="ant-collapse-content ant-collapse-content-active"
          >
            <div
              class="ant-collapse-content-box"
            >
              <div
                class="search-results-v2__filters-card-group"
              >
                <span
                  class="ant-typography search-results-v2__filters-card-label"
                >
                  <strong>
                    Region
                  </strong>
                </span>
                <div
                  class="search-results-v2__filters-card-list"
                >
                  <div
                    class="search-results-v2__filters-card-item"
                  >
                    <label
                      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked"
                    >
                      <span
                        class="ant-checkbox ant-checkbox-checked"
                      >
                        <input
                          checked=""
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        <span
                          class="search-results-v2__filters-card-item-text"
                        >
                          SW
                           
                          <span
                            class="ant-typography ant-typography-secondary search-results-v2__filters-card-item-count"
                          >
                            (
                            10
                            )
                          </span>
                        </span>
                      </span>
                    </label>
                  </div>
                  <div
                    class="search-results-v2__filters-card-item"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        <span
                          class="search-results-v2__filters-card-item-text"
                        >
                          NE
                           
                          <span
                            class="ant-typography ant-typography-secondary search-results-v2__filters-card-item-count"
                          >
                            (
                            5
                            )
                          </span>
                        </span>
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="search-results-v2__filters-card-group"
              >
                <span
                  class="ant-typography search-results-v2__filters-card-label"
                >
                  <strong>
                    Classification
                  </strong>
                </span>
                <div
                  class="search-results-v2__filters-card-list"
                >
                  <div
                    class="search-results-v2__filters-card-item"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        <span
                          class="search-results-v2__filters-card-item-text"
                        >
                          Regional Mine
                           
                          <span
                            class="ant-typography ant-typography-secondary search-results-v2__filters-card-item-count"
                          >
                            (
                            12
                            )
                          </span>
                        </span>
                      </span>
                    </label>
                  </div>
                  <div
                    class="search-results-v2__filters-card-item"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        <span
                          class="search-results-v2__filters-card-item-text"
                        >
                          Major Mine
                           
                          <span
                            class="ant-typography ant-typography-secondary search-results-v2__filters-card-item-count"
                          >
                            (
                            8
                            )
                          </span>
                        </span>
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-collapse-item"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="right"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <span
                    style="color: rgb(230, 81, 0);"
                  >
                    <span
                      aria-label="file-protect"
                      class="anticon anticon-file-protect"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="file-protect"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M644.7 669.2a7.92 7.92 0 00-6.5-3.3H594c-6.5 0-10.3 7.4-6.5 12.7l73.8 102.1c3.2 4.4 9.7 4.4 12.9 0l114.2-158c3.8-5.3 0-12.7-6.5-12.7h-44.3c-2.6 0-5 1.2-6.5 3.3l-63.5 87.8-22.9-31.9zM688 306v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm184 458H208V148h560v296c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h312c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm402.6-320.8l-192-66.7c-.9-.3-1.7-.4-2.6-.4s-1.8.1-2.6.4l-192 66.7a7.96 7.96 0 00-5.4 7.5v251.1c0 2.5 1.1 4.8 3.1 6.3l192 150.2c1.4 1.1 3.2 1.7 4.9 1.7s3.5-.6 4.9-1.7l192-150.2c1.9-1.5 3.1-3.8 3.1-6.3V538.7c0-3.4-2.2-6.4-5.4-7.5zM826 763.7L688 871.6 550 763.7V577l138-48 138 48v186.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <span
                    class="ant-typography ant-typography-secondary"
                    style="font-size: 13px;"
                  >
                    Permit Filters
                  </span>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchFiltersPanel Snapshots matches snapshot with facets 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-small search-results-v2__filters-card"
  >
    <div
      class="ant-card-body"
    >
      <div
        class="search-results-v2__filters-card-header"
      >
        <span
          class="ant-typography"
        >
          <strong>
            <span
              aria-label="filter"
              class="anticon anticon-filter search-results-v2__filters-card-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="filter"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M880.1 154H143.9c-24.5 0-39.8 26.7-27.5 48L349 597.4V838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V597.4L907.7 202c12.2-21.3-3.1-48-27.6-48zM603.4 798H420.6V642h182.9v156zm9.6-236.6l-9.5 16.6h-183l-9.5-16.6L212.7 226h598.6L613 561.4z"
                />
              </svg>
            </span>
            Filters
          </strong>
        </span>
      </div>
      <div
        class="ant-collapse ant-collapse-icon-position-end ant-collapse-ghost"
      >
        <div
          class="ant-collapse-item ant-collapse-item-active"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="right"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  style="transform: rotate(90deg);"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <span
                    style="color: rgb(46, 125, 50);"
                  >
                    <span
                      aria-label="environment"
                      class="anticon anticon-environment"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="environment"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M854.6 289.1a362.49 362.49 0 00-79.9-115.7 370.83 370.83 0 00-118.2-77.8C610.7 76.6 562.1 67 512 67c-50.1 0-98.7 9.6-144.5 28.5-44.3 18.3-84 44.5-118.2 77.8A363.6 363.6 0 00169.4 289c-19.5 45-29.4 92.8-29.4 142 0 70.6 16.9 140.9 50.1 208.7 26.7 54.5 64 107.6 111 158.1 80.3 86.2 164.5 138.9 188.4 153a43.9 43.9 0 0022.4 6.1c7.8 0 15.5-2 22.4-6.1 23.9-14.1 108.1-66.8 188.4-153 47-50.4 84.3-103.6 111-158.1C867.1 572 884 501.8 884 431.1c0-49.2-9.9-97-29.4-142zM512 880.2c-65.9-41.9-300-207.8-300-449.1 0-77.9 31.1-151.1 87.6-206.3C356.3 169.5 431.7 139 512 139s155.7 30.5 212.4 85.9C780.9 280 812 353.2 812 431.1c0 241.3-234.1 407.2-300 449.1zm0-617.2c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 551c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 439c0-29.9 11.7-58 32.8-79.2C454 338.6 482.1 327 512 327c29.9 0 58 11.6 79.2 32.8C612.4 381 624 409.1 624 439c0 29.9-11.6 58-32.8 79.2z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <span
                    class="ant-typography ant-typography-secondary"
                    style="font-size: 13px;"
                  >
                    Mine Filters
                  </span>
                </div>
              </div>
            </span>
          </div>
          <div
            class="ant-collapse-content ant-collapse-content-active"
          >
            <div
              class="ant-collapse-content-box"
            >
              <div
                class="search-results-v2__filters-card-group"
              >
                <span
                  class="ant-typography search-results-v2__filters-card-label"
                >
                  <strong>
                    Region
                  </strong>
                </span>
                <div
                  class="search-results-v2__filters-card-list"
                >
                  <div
                    class="search-results-v2__filters-card-item"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        <span
                          class="search-results-v2__filters-card-item-text"
                        >
                          SW
                           
                          <span
                            class="ant-typography ant-typography-secondary search-results-v2__filters-card-item-count"
                          >
                            (
                            10
                            )
                          </span>
                        </span>
                      </span>
                    </label>
                  </div>
                  <div
                    class="search-results-v2__filters-card-item"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        <span
                          class="search-results-v2__filters-card-item-text"
                        >
                          NE
                           
                          <span
                            class="ant-typography ant-typography-secondary search-results-v2__filters-card-item-count"
                          >
                            (
                            5
                            )
                          </span>
                        </span>
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="search-results-v2__filters-card-group"
              >
                <span
                  class="ant-typography search-results-v2__filters-card-label"
                >
                  <strong>
                    Classification
                  </strong>
                </span>
                <div
                  class="search-results-v2__filters-card-list"
                >
                  <div
                    class="search-results-v2__filters-card-item"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        <span
                          class="search-results-v2__filters-card-item-text"
                        >
                          Regional Mine
                           
                          <span
                            class="ant-typography ant-typography-secondary search-results-v2__filters-card-item-count"
                          >
                            (
                            12
                            )
                          </span>
                        </span>
                      </span>
                    </label>
                  </div>
                  <div
                    class="search-results-v2__filters-card-item"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        <span
                          class="search-results-v2__filters-card-item-text"
                        >
                          Major Mine
                           
                          <span
                            class="ant-typography ant-typography-secondary search-results-v2__filters-card-item-count"
                          >
                            (
                            8
                            )
                          </span>
                        </span>
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-collapse-item"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="right"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <span
                    style="color: rgb(230, 81, 0);"
                  >
                    <span
                      aria-label="file-protect"
                      class="anticon anticon-file-protect"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="file-protect"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M644.7 669.2a7.92 7.92 0 00-6.5-3.3H594c-6.5 0-10.3 7.4-6.5 12.7l73.8 102.1c3.2 4.4 9.7 4.4 12.9 0l114.2-158c3.8-5.3 0-12.7-6.5-12.7h-44.3c-2.6 0-5 1.2-6.5 3.3l-63.5 87.8-22.9-31.9zM688 306v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm184 458H208V148h560v296c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h312c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm402.6-320.8l-192-66.7c-.9-.3-1.7-.4-2.6-.4s-1.8.1-2.6.4l-192 66.7a7.96 7.96 0 00-5.4 7.5v251.1c0 2.5 1.1 4.8 3.1 6.3l192 150.2c1.4 1.1 3.2 1.7 4.9 1.7s3.5-.6 4.9-1.7l192-150.2c1.9-1.5 3.1-3.8 3.1-6.3V538.7c0-3.4-2.2-6.4-5.4-7.5zM826 763.7L688 871.6 550 763.7V577l138-48 138 48v186.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <span
                    class="ant-typography ant-typography-secondary"
                    style="font-size: 13px;"
                  >
                    Permit Filters
                  </span>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
